--- a/plugin-descriptor.properties
+++ b/plugin-descriptor.properties
@@ -25,5 +25,6 @@ version=1.7.5.1
 # 'name': the plugin name
 name=elastic-recurring-plugin
 #
+site=true
 # 'elasticsearch.version': version of elasticsearch compiled against
 elasticsearch.version=2.3.4
